[package]
name = "rmds"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
default = ["shaderc"]

[dependencies]
#vk_core = { path = "../vk_core" }
vk_core = { git = "https://github.com/Masterchef365/vk_core.git", branch = "descriptor_set_allocator" }
erupt = "0.15"
genmap = "1.0"
anyhow = "1"
shaderc = { version = "0.7", optional = true }
gpu-alloc-erupt = "0.1"
gpu-alloc = "0.2"

[dev-dependencies]
bytemuck = "1.4"
